--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="navbar-s">
+            <div class="navbar-text-s">
+                
+            </div>
+        </div>
     </div>
 </body>
 </html>
