--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./sass.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="container">
         
+    </div>
+    <div class="container-a">
+        <div class="navbar-a">
+            <i class="bi bi-list"></i>
+        </div>
+        <div class="text-a">
+
+        </div>
+        <div class="img-a">
+
+        </div>
     </div>
 </body>
 </html>
