--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
             <i class="bi bi-list"></i>
         </div>
         <div class="text-a">
-
+            <h4>Lorem, ipsum.</h4>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita libero quidem aspernatur at blanditiis.</h2>
         </div>
         <div class="img-a">
-
+            <div class="all1">
+                <img src="./img/Без названия.jpg" alt="">
+            </div>
+            <div class="all1">
+                <img src="./img/Без названия (1).jpg" alt="">
+            </div>
+            <div class="all1">
+                <img src="./img/images.jpg" alt="">
+            </div>
         </div>
     </div>
 </body>
