--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./sass.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="container">
         <div class="navbar-s">
-            <div class="navbar-text-s">
-                
-            </div>
+            <i class="bi bi-list"></i>
+        </div>
+        <div class="text-s">
+            <h1>Are You Ready</h1>
+            <h2>TO TAKE YOUR BUSINESS TO THE NEXT LEVEL</h2>
+            <button>Learn More</button>
         </div>
     </div>
 </body>
